<resources>
    <string name="loading_progress" translatable="false">%1$d %%</string>
    <string name="acb_phone_caller_default_name" translatable="false">Marry</string>
    <string name="acb_phone_caller_default_number">626-202-3399</string>
    <string name="network_err" translatable="false">No Internet connection.</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="app_slogan">Stand out with a colorful touch</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="theme_apply">Apply</string>
    <string name="apply_success">Apply Success</string>
    <string name="theme_current">Current Theme</string>
    <string name="send_email">Send Email</string>
    <string name="loading">Loading </string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="guide_enable_all_module">Enable Phone Assistant</string>
    <string name="guide_first_page_title">Please enable the features and permissions:\n Remind you about missed calls.</string>
    <string name="guide_first_page_title_old">Enable Call Assistant &amp; Charging Monitor to:\n Remind you about missed calls\n Provide detailed charging status.</string>
    <string name="acb_outapp_guide_screen_flash_content">Try the unique call interface to make your phone more fashionable. It may contain ads.</string>
    <string name="about">About</string>
    <string name="guide_apply_theme_hint">Your theme of Caller Screen has been  successfully set up! Enjoy it!</string>
    <string name="smart_charging">Charging Monitor</string>
    <string name="smart_charging_hint">Automatically monitor charging status and stop over-charging to prevent
        battery damage</string>
    <string name="color_lockscreen">Color Screensaver</string>
    <string name="color_lockscreen_hint">Glorify your screensaver using various fancy and cool themes (May contain
        ads)</string>
    <string name="sms_assistant">SMS Assistant</string>
    <string name="sms_assistant_hint">SMS Assistant will remind you of new messages</string>
    <string name="call_assistant_hint">Call Assistant will remind you of missed calls (May contain ads)</string>
    <string name="surprise">Surprise!</string>
    <string name="share_alert_content">Give a friend a surprise! Show your friend the exclusive theme you set for him!</string>
    <string name="share">SHARE</string>
    <string name="share_default_name">Ava</string>
    <string name="share_default_number">(616) *** 6789</string>
    <string name="select_contacts">Select Contacts</string>
    <string name="contact_theme">Contact Theme</string>
    <string name="contact_select_hint">Apply \'%1$s\' theme to selected contact(s)</string>
    <string name="delete">DELETE</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="theme_set_for_all">SET FOR ALL</string>
    <string name="theme_set_for_one">Set for Someone</string>
    <string name="set">SET</string>
    <string name="empty_contact_hint">You haven’t set up theme\n for your contacts.</string>
    <string name="promote_locker_alert_title" translatable="false">Color Locker For Free</string>
    <string name="promote_locker_alert_description" translatable="false">Choose beautiful wallpapers to make your lock screen stand out</string>
    <string name="promote_add_for_free" translatable="false">ADD FOR FREE</string>
    <string name="promote_no_thanks" translatable="false">NO, THANKS</string>
    <string name="promote_apply_success" translatable="false">APPLY SUCCESS!</string>
    <string name="ringtone_hint_after_apply">Set the theme and ringtone successfully</string>
    <string name="ringtone_hint_before_apply">Set theme to enjoy the ringtone</string>
    <string name="boost_plus_memory_used">Memory Used</string>
    <string name="boost_plus_freeable">Memory to Clean</string>
    <string name="optimalpage_boostplus">Perfect</string>
    <string name="optimalpage_boostplus_desc">Your phone is as fast as a rocket!</string>
    <string name="optimalpage_junkclean_desc">Your phone is clean as new!</string>
    <string name="byte_abbr" translatable="false">B</string>
    <string name="kilobyte_abbr" translatable="false">KB</string>
    <string name="megabyte_abbr" translatable="false">M</string>
    <string name="gigabyte_abbr" translatable="false">G</string>
    <string name="terabyte_abbr" translatable="false">TB</string>
    <string name="petabyte_abbr" translatable="false">PB</string>
    <string name="boost_plus_free_up">Freed Up</string>
    <string name="boost_plus_exiting">Exiting</string>
    <string name="boost_tip_optimal">Your phone is optimal now!</string>
    <string name="boost_title">Boost</string>
    <string name="boost_notification_low_ram_btn">BOOST</string>
    <string name="notification_boost_plus_title_ram">%1$s%% Memory Used!</string>
    <string name="notification_boost_plus_title">%1$s Apps Slowing Down Phone!</string>
    <string name="notification_boost_plus_description_bold_word">Boost+</string>
    <string name="notification_boost_plus_description">Use Boost+ to boost your phone!</string>
    <string name="settings_notification_settings">Notification Settings</string>
    <string name="settings_notification_boost">Boost Notification</string>
    <string name="settings_notification_boost_sub">Get reminders when memory usage is high</string>
    <string name="may_contain_ads">May Contain ads</string>
    <string name="avatar_content">Create your avatar right away</string>
    <string name="action_back">BACK</string>
    <string name="action_install">INSTALL</string>
    <string name="five_star_hint_text">How was your experience with us?</string>
    <string name="five_star_positive_text">Submit</string>
    <string name="five_star_one_text">Hated it</string>
    <string name="five_star_two_text">Disliked it</string>
    <string name="five_star_three_text">It was OK</string>
    <string name="five_star_four_text">Liked it</string>
    <string name="five_star_five_text">Loved it</string>
    <string name="loved_it_desc">Thanks! Please rate with words like Nice, Useful, Stylish…</string>
    <string name="liked_it_desc">Please tell us what you dislike. We will try our best to improve it!</string>
    <string name="smart_assistant">Smart Assistant</string>
    <string name="smart_assistant_tip_msg">Recommend apps by intelligence.</string>
    <string name="disable">Disable</string>
    <string name="usage_access_guide_hint">Enable Usage Access to Show Recommend Apps</string>
    <string name="accessibility_service_description">修复受限功能，请打开右上角开关↗ ↗ ↗\n修复完成后，可以正常使用焕彩来电秀等功能。\n\n提示：打开开关后，将收到系统例行风险提醒，点击“确认”即可。\n请放心使用，焕彩来电秀将不会收集任何隐私数据。</string>
    <string name="accessibility_service_description_xiaomi">@string/accessibility_service_description</string>
    <string name="led_flash_switch_text">Led Flash</string>
    <string name="acb_phone_grant_notification_access_title">Enable Notifications Access to Answer Calls</string>
    <string name="draw_overlay_window_hint">Enable Drawing Over Other Apps to Show Screen Flash</string>
    <string name="draw_overlay_bar_hint">Enable Access to Use Color Phone</string>
    <string name="acb_phone_enable_notification">Enable it Now</string>
    <string name="grant_access_to_optimize_experience">Enable Access to Answer Calls</string>
    <string name="loading_reward_videos">loading video...</string>
    <string name="watch_video_to_unlock">Watch an ad to unlock</string>
    <string name="load_reward_ad_error">Oops， try again later</string>
    <string name="watch_video_to_unlock_free_theme">Watch an ad to unlock the beautiful theme</string>
    <string name="unlock">UNLOCK</string>
    <string name="unlock_succeed">Unlocked successfully</string>
    <string name="gdpr_restarting_app">Restarting</string>
    <string name="gdpr_dialog_title">Confirm to turn off?</string>
    <string name="gdpr_dialog_content">These data are collected and used to help the developer improve the apps for better using experience.</string>
    <string name="gdpr_settings_cell">Analytics &amp; Advertising</string>
    <string name="gdpr_share_data">Share data with developers</string>
    <string name="gdpr_dialog_not_now">NOT NOW</string>
    <string name="gdpr_dialog_turn_off">TURN OFF</string>
    <string name="led_flash_for_messages">Led Flash for Messages</string>
    <string name="led_flash_for_calls">Led Flash for Calls</string>
    <string name="notification_toolbar_settings">@string/settings</string>
    <string name="settings_activity_notification_reminder">Notification Toolbar Toggle</string>
    <string name="ok_btn_text">OK</string>
    <string name="result_page_boost_plus_optimal">OPTIMAL</string>
    <string name="result_page_boost_plus_free_up">Freed Up</string>
    <string name="cpu_cooler_notification_title" translatable="false">CPU</string>
    <string name="cpu_cooler_list_head_title">CPU-heating Apps</string>
    <string name="cpu_cooler_button_title">COOL DOWN</string>
    <string name="cpu_cooler_state_hint">CPU is %1$s</string>
    <string name="cpu_cooler_state_cool">cool</string>
    <string name="cpu_cooler_state_overheated">overheated</string>
    <string name="cpu_cooler_state_extremely_heated">Heated</string>
    <string name="cpu_cooler_cleaning_hint">Closing CPU consumers…</string>
    <string name="cool_capital">COOL</string>
    <string name="battery_title">Battery</string>
    <string name="battery_bluetooth">Bluetooth</string>
    <string name="battery_mobile_data">Mobile Data</string>
    <string name="battery_current">Current</string>
    <string name="battery_already_optimal">Your battery is in good condition!</string>
    <string name="battery_auto">Auto</string>
    <string name="battery_auto_sync">Auto Sync</string>
    <string name="battery_brightness">Brightness</string>
    <string name="battery_careful">Careful</string>
    <string name="battery_charging_left">CHARGING LEFT</string>
    <string name="battery_current_content">Your current settings will be saved here.</string>
    <string name="battery_haptic_feedback">Haptic Feedback</string>
    <string name="battery_hide_system_apps">Hide System Apps</string>
    <string name="battery_low">Low Battery</string>
    <string name="battery_low_content">Optimize to extend your battery life.</string>
    <string name="battery_max_saver">Max Saver</string>
    <string name="battery_max_saver_content">Turn off WiFi, Bluetooth, vibrate and set screen timeout to 15s.</string>
    <string name="battery_mode">Mode</string>
    <string name="battery_off">Off</string>
    <string name="battery_on">On</string>
    <string name="battery_optimize">OPTIMIZE</string>
    <string name="battery_optimize_new">SAVE POWER</string>
    <string name="battery_previous">Previous</string>
    <string name="default_dialer">Default Dialer</string>
    <string name="follow_facebook">Follow us on facebook</string>
    <string name="guide_theme_random_hint">Applying this theme, you can enjoy random themes for incoming calls.</string>
    <string name="custom_font_regular" translatable="false">ProximaNova-Regular</string>
    <string name="custom_font_semibold" translatable="false">ProximaNova-Semibold</string>
    <string name="custom_font_bold" translatable="false">ProximaNova-Bold</string>
    <string name="news_network_err_content">网络错误,请检查你的网络连接再试一次</string>
    <string name="news_network_err_action">点击重试</string>
    <string name="start_guide_skip_dialog_title">来电秀部分功能失效</string>
    <string name="start_guide_skip_dialog_content">权限未全部开启，可能导致无法正常展示来电秀功能</string>
    <string name="start_guide_skip_dialog_ok">立即修复</string>
    <string name="start_guide_skip_dialog_cancel">暂不修复</string>
</resources>