<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/led_call_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:orientation="vertical"
    tools:background="#222222">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="24" />

    <android.support.percent.PercentFrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.acb.call.views.CircleImageView
            android:id="@+id/caller_avatar"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            app:layout_aspectRatio="100%"
            app:layout_widthPercent="25%" />
    </android.support.percent.PercentFrameLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15" />

    <com.superapps.view.TypefacedTextView
        android:id="@+id/first_line"
        style="@style/TextInCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_default_name"
        android:textSize="32dp"
        app:typeface="@string/custom_font_semibold"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3" />

    <TextView
        android:id="@+id/second_line"
        style="@style/TextInCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_default_number"
        android:textSize="24dp" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="366" />

</LinearLayout>