<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_80_transparent">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:src="@drawable/guide_random_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <com.superapps.view.TypefacedTextView
        android:id="@+id/textview1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView1"
        app:layout_constraintStart_toStartOf="@+id/imageView1"
        app:layout_constraintTop_toBottomOf="@id/imageView1"
        app:layout_constraintVertical_bias="0"
        app:typeface="@string/custom_font_semibold"
        android:text="@string/guide_theme_random_hint" />

    <com.superapps.view.TypefacedTextView
        android:id="@+id/guide_random_ok"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:textColor="#01020a"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview1"
        app:layout_constraintVertical_bias="0.25"
        app:typeface="@string/custom_font_bold"
        android:text="@android:string/ok"

        />


</android.support.constraint.ConstraintLayout>